launch initial build in external vm